Add ovn-northd-container to AIO metal scenario
Change-Id: Ibf1d1bec88408d0f3250e1a655fb09d31a78519c
Signed-off-by: Dmitriy Chubinidze <dcu995@gmail.com>

--- a/etc/openstack_deploy/env.d/aio_metal.yml.example
+++ b/etc/openstack_deploy/env.d/aio_metal.yml.example
@@ -81,6 +81,9 @@ container_skel:
   neutron_agents_container:
     properties:
       is_metal: true
+  neutron_ovn_northd_container:
+    properties:
+      is_metal: true
   neutron_server_container:
     properties:
       is_metal: true
