Force skyline-console yarn build
`skyline_console_git_install_branch` was pinned to a PyPi version,
which caused the yarn build to be skipped. Switch to using 
SHA to ensure yarn build is always triggered.

Closes-Bug: #2137138
Change-Id: I166fe5c0e18c938592b642b5ca95d2a3e3ab4006
Signed-off-by: Dmitriy Chubinidze <dcu995@gmail.com>

--- a/inventory/group_vars/skyline_all/source_git.yml
+++ b/inventory/group_vars/skyline_all/source_git.yml
@@ -21,5 +21,5 @@ skyline_git_install_branch: cd31aa512728564b7efa1c1f06a8f8c6d1d9f643
 skyline_git_track_branch: master
 
 skyline_console_git_repo: "{{ openstack_opendev_base_url }}/openstack/skyline-console"
-skyline_console_git_install_branch: 7.0.0
+skyline_console_git_install_branch: 55452991b5deb5e533cc71eeed349fe6431e2f68
 skyline_console_git_track_branch: None
