--- a/tests/roles/bootstrap-host/vars/main.yml
+++ b/tests/roles/bootstrap-host/vars/main.yml
@@ -36,8 +36,8 @@ _lxc_container_backing_store: |-
 bootstrap_host_scenarios_expanded: |-
   {# Keystone is included in every scenario #}
   {% set scenario_list = bootstrap_host_scenarios + ['keystone', 'haproxy'] %}
-  {% if ['aio', 'translations'] | intersect(bootstrap_host_scenarios) | length > 0 %}
-  {#   Base services deployed with aio and translations scenarios #}
+  {% if ['aio'] | intersect(bootstrap_host_scenarios) | length > 0 %}
+  {#   Base services deployed with aio scenario #}
   {%   set _ = scenario_list.extend(['cinder', 'glance', 'neutron', 'nova', 'placement', 'horizon']) %}
   {% endif %}
   {# Service additions based on scenario presence #}
@@ -62,9 +62,6 @@ bootstrap_host_scenarios_expanded: |-
   {% endif %}
   {% if ['telemetry', 'aodh', 'ceilometer', 'gnocchi'] | intersect(bootstrap_host_scenarios) | length > 0 %}
   {%   set _ = scenario_list.extend(['aodh', 'ceilometer', 'gnocchi', 'zookeeper']) %}
-  {% endif %}
-  {% if 'translations' in bootstrap_host_scenarios %}
-  {%   set _ = scenario_list.extend(['designate', 'heat', 'magnum', 'swift', 'trove']) %}
   {% endif %}
   {{ (scenario_list | unique) | sort }}
 
